<resources>
    <string name="app_name">DemoCukCuk</string>
    <string name="add_order">Thêm món</string>
    <string name="app_name_up_case">CUKCUK LITE</string>
    <string name="action_add">add</string>

    <string name="btn_login_facebook">Đăng nhập bằng Facebook</string>
    <string name="btn_login_google">Đăng nhập bằng Google</string>
    <string name="btn_login_phone">Đăng nhập bằng số điện thoại hoặc email</string>
    <string name="button_login">Đăng nhập</string>
    <string name="button_sign_in">Đăng ký</string>
    <string name="btn_save_login">Lưu thông tin</string>
    <string name="btn_save">Cất</string>

    <string name="forgot_password">Quên mật khẩu</string>

    <string name="menu_sale">Bán hàng</string>
    <string name="menu_order">Thực đơn</string>
    <string name="menu_slideshow">Báo cáo</string>

    <string name="login_number_phone_hint">Số điện thoại hoặc email</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="password_hint">Mật khẩu</string>

    <string name="toolbar_title_add_food">Thêm món</string>
    <string name="tv_no_account">Bạn chưa có tài khoản?Tạo mới</string>
    <string name="tv_price">Giá bán: </string>
    <string name="tv_Food_name">Tên món*</string>
    <string name="tv_unit">Đơn vị tính*</string>
    <string name="tv_color">Màu sắc</string>
    <string name="tv_icon">Biểu tượng</string>


</resources>
