<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".order.AddFood.AddFood">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imvBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/tvTitleToolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tv_saveFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/app_margin_small"
                    android:text="@string/btn_save"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/app_margin_small"
                android:layout_weight="2"
                android:text="@string/tv_Food_name" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/app_margin_small"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="Nhập tên món" />
        </LinearLayout>


        <vn.com.misa.orderdemo.order.AddFood.CustomAddFood
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tvValue="0"
            app:ivNext="@drawable/ic_chevron_right"
            app:tvText="@string/tv_price"></vn.com.misa.orderdemo.order.AddFood.CustomAddFood>
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/order_margin"-->
        <!--android:text="@string/tv_price" />-->

        <!--<TextView-->
        <!--android:id="@+id/tvPrice"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/order_margin"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="right"-->
        <!--android:text="0"-->
        <!--android:textColor="@color/colorBlack" />-->

        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:src="@drawable/ic_chevron_right" />-->

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/app_margin_small"
                android:text="@string/tv_unit" />

            <TextView
                android:id="@+id/tvUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/app_margin_small"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Bát"
                android:textColor="@color/colorBlack" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_chevron_right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/app_margin_small"
                android:text="@string/tv_color" />

            <FrameLayout
                android:id="@+id/frmColor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_color_selector">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center" />
            </FrameLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/app_margin_small"
                    android:text="@string/tv_icon" />

                <FrameLayout
                    android:id="@+id/frmIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_color_selector">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/app_margin_small"
        android:background="@drawable/bg_button_save"
        android:text="@string/btn_save"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_big" />

</RelativeLayout>